data/derived/comb/progs/unify/prog7281.ml.out
Characters 120-121:
  | _  -> [h*i/10];;
           ^
Error: This expression has type 'a list
       but an expression was expected of type int
